--- a/.github/workflows/deployAzureWeb.yaml
+++ b/.github/workflows/deployAzureWeb.yaml
@@ -1,4 +1,4 @@
-name: Deploy Java Web App to Azure
+name: Build and Deploy Java Web App to Azure CICD Training
 
 on:
   push:
@@ -14,15 +14,16 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_WEBAPP_NAME: bfdemojava02  # set this to your application's name
+  AZURE_WEBAPP_NAME: mundosepetclinic  # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: ${{ github.workspace }} # set this to the path to your web app project
   JAVA_VERSION: '11'                # set this to the java version to use
   AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}     # set GH repo secret with the publish profile of the web app
 
 jobs:
-  build-and-deploy:
+  jobbuild:
     name: Build and Deploy
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@master
     - name: Set up JDK 11
@@ -31,12 +32,16 @@ jobs:
         java-version: ${{ env.JAVA_VERSION }}
     - name: Build with Maven
       run: mvn package --file pom.xml
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
+  jobdeploy:
+    needs: jobbuild
+    runs-on: ubuntu-latest
+    name: 'Deploy to Azure WebApp'
+    steps:
+    - uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/target/*.jar'
-        
+
   # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
   # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
