--- a/.github/workflows/deployAzureWeb.yaml
+++ b/.github/workflows/deployAzureWeb.yaml
@@ -32,11 +32,8 @@ jobs:
         java-version: ${{ env.JAVA_VERSION }}
     - name: Build with Maven
       run: mvn package --file pom.xml
-  jobdeploy:
-    needs: jobbuild
-    runs-on: ubuntu-latest
-    name: 'Deploy to Azure WebApp'
-    steps:
+
+    - name: 'Deploy to Azure WebApp'
     - uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
