--- a/.github/workflows/deployAzureWeb.yaml
+++ b/.github/workflows/deployAzureWeb.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Build with Maven
       run: mvn package --file pom.xml
     - name: 'Deploy to Azure WebApp'
-    - uses: azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
