--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
     <jacoco.version>0.8.5</jacoco.version>
     <nohttp-checkstyle.version>0.0.4.RELEASE</nohttp-checkstyle.version>
     <spring-format.version>0.0.25</spring-format.version>
+
+    <!-- SonarCloud-->
+
+    <sonar.projectKey>MartinCalderon18_cicd-java-petclinic-az</sonar.projectKey>
+    <sonar.organization>martincalderon18</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
   </properties>
 
   <dependencies>
