Added a comment to trigger a scan again

--- a/.github/workflows/deployAzureWeb.yaml
+++ b/.github/workflows/deployAzureWeb.yaml
@@ -23,7 +23,7 @@ jobs:
   jobbuild:
     name: Build and Deploy
     runs-on: ubuntu-latest
-
+# Adding JDK to the Worker
     steps:
     - uses: actions/checkout@master
     - name: Set up JDK 11
