--- a/.github/workflows/deployawselasticbean.yaml
+++ b/.github/workflows/deployawselasticbean.yaml
@@ -14,6 +14,10 @@ on:
 #
 # 2. Change these variables for your configuration:
 
+env:
+  JAVA_VERSION: '11'  
+
+
 jobs:
   jobbuild:
     name: AWS Build and Deploy
