--- a/.github/workflows/deployawselasticbean.yaml
+++ b/.github/workflows/deployawselasticbean.yaml
@@ -57,5 +57,6 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: pet-clinic
         environment_name: PetClinic-env
+        version_label: ${{github.SHA}}
         region: us-east-2
         deployment_package: target/*.jar
