--- a/.github/workflows/deployawselasticbean.yaml
+++ b/.github/workflows/deployawselasticbean.yaml
@@ -55,7 +55,7 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: pet-clinic
+        application_name: petclinic
         environment_name: PetClinic-env
         version_label: ${{github.SHA}}
         region: us-east-2
